--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@
                 <div class="movie-row">
                     <div class="poster-wrapper">
                         <div class="poster-tape"></div>
-                        <img src="/imigez/0.png" alt="Movie Poster" class="movie-poster">
+                        <img src="/imigez/0.jpg" alt="Movie Poster" class="movie-poster">
                         <div class="poster-tape-bottom"></div>
                     </div>
                     <div class="movie-info">
@@ -737,7 +737,7 @@
                 <div class="movie-row">
                     <div class="poster-wrapper">
                         <div class="poster-tape"></div>
-                        <img src="/imigez/1.png" alt="Movie Poster" class="movie-poster">
+                        <img src="/imigez/1.jpg" alt="Movie Poster" class="movie-poster">
                         <div class="poster-tape-bottom"></div>
                     </div>
                     <div class="movie-info">
@@ -750,7 +750,7 @@
                 <div class="movie-row">
                     <div class="poster-wrapper">
                         <div class="poster-tape"></div>
-                        <img src="/imigez/2.png" alt="Movie Poster" class="movie-poster">
+                        <img src="/imigez/2.jpg" alt="Movie Poster" class="movie-poster">
                         <div class="poster-tape-bottom"></div>
                     </div>
                     <div class="movie-info">
@@ -763,7 +763,7 @@
                                 <div class="movie-row">
                     <div class="poster-wrapper">
                         <div class="poster-tape"></div>
-                        <img src="/imigez/3.png" alt="Movie Poster" class="movie-poster">
+                        <img src="/imigez/3.jpg" alt="Movie Poster" class="movie-poster">
                         <div class="poster-tape-bottom"></div>
                     </div>
                     <div class="movie-info">
