--- a/index.html
+++ b/index.html
@@ -753,7 +753,7 @@
                             smial <span class="floating-emoji">😬</span>
                         </h2>
                         <p class="movie-date">sunday, march 16</p>
-                        <p class="movie-description">dooood dis mooovee got me seein facesss erywhere!! spooooky viiibz n scary teef!! my eyez cant unsee da thingzz!!</p>
+                        <p class="movie-description">dawg thats some realy scawy stuf. ur gona be like wohhhh. wooowww . hheeeyyyaa.</p>
                         <a href="/tix.html" class="get-tix-button">get tix</a>
                     </div>
                 </div>
@@ -767,7 +767,7 @@
                     <div class="movie-info">
                         <h2 class="movie-title">tha truman sho <span class="rotating-emoji">🤯</span></h2>
                         <p class="movie-date">sundae, march 23 </p>
-                        <p class="movie-description">bruuuhhhzzz wut even iz relty?? jim caree makin me qwestshun EVRYTHIN!! mi brain iz melllltinnnn... woaaaaah!!</p>
+                        <p class="movie-description">bruuuhhhzzz wut even iz relty?? jim caree makin me qwestchun EVRYTHIN!! mai brain mellllinnnn... woaaaaah!!</p>
                         <a href="/tix.html" class="get-tix-button">get tix</a>
                     </div>
                 </div>
@@ -795,7 +795,7 @@
                     <div class="movie-info">
                         <h2 class="movie-title">the shinning <span class="floating-emoji">🔪</span></h2>
                         <p class="movie-date">sundae, aprile 6 </p>
-                        <p class="movie-description">skarrreeeee hotellll movieee!! axsss n dooorzzz n weeeird stuffzz!! jak nikkulsn face got me hidin undrrr my beddd forrreverrr!!</p>
+                        <p class="movie-description">scarie ass a malingshu e!! gon gnock ur sock right of them darn feet. jak nikkul sonnnn!!</p>
                         <a href="/tix.html" class="get-tix-button">get tix</a>
                     </div>
                 </div>
