--- a/tix.html
+++ b/tix.html
@@ -87,7 +87,7 @@
         
         <h3>or come to the Q the day of! but that more expeeeeensive</h3>
         
-        <img src="/imigez/qr.png" alt="QR Code" class="qr-code">
+        <img src="/imigez/qr.jpg" alt="QR Code" class="qr-code">
 
         <p class="address"><b>707 park way, berkeley, ca 94710</b></p>
         <a href="https://maps.app.goo.gl/mFSNpki6kKvGDwoy6" class="map-link" target="_blank">open in maps</a>
