--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>the lean theater</title>
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Comic+Sans+MS&display=swap');
-        
+     @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap');
+
+body {
+    font-family: "Comic Sans MS", "Comic Neue", "Arial", "Verdana", sans-serif;
+}
+
         :root {
             --rotate: 0deg;
             --purple-dark: #300033;
@@ -50,7 +54,6 @@
             padding: 20px;
             background-color: var(--purple-dark);
             color: #fff;
-            font-family: 'Comic Sans MS', cursive, sans-serif;
             text-align: center;
             overflow-x: hidden;
             cursor: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 24 24' fill='%23cc00ff' stroke='%23660066' stroke-width='1'%3E%3Cpath d='M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm0 18c-4.4 0-8-3.6-8-8s3.6-8 8-8 8 3.6 8 8-3.6 8-8 8zm4-8c0 .6-.4 1-1 1s-1-.4-1-1 .4-1 1-1 1 .4 1 1zm-6 0c0 .6-.4 1-1 1s-1-.4-1-1 .4-1 1-1 1 .4 1 1zm7.5 3c-.4.7-1.1 1.3-1.9 1.7s-1.7.6-2.6.6-1.8-.2-2.6-.6-1.5-1-1.9-1.7l-1.5.8c.5 1 1.4 1.9 2.4 2.5s2.2.9 3.5.9 2.5-.3 3.5-.9 1.9-1.5 2.4-2.5l-1.5-.8z'/%3E%3C/svg%3E") 16 16, auto;
