--- a/tix.html
+++ b/tix.html
@@ -8,7 +8,7 @@
         body {
             background-color: #300033;
             color: #fff;
-            font-family: 'Comic Sans MS', cursive, sans-serif;
+              font-family: "Comic Sans MS", "Comic Neue", "Arial", "Verdana", sans-serif;
             text-align: center;
             padding: 20px;
         }
