--- a/index.html
+++ b/index.html
@@ -805,7 +805,7 @@ body {
             </div>
             
             <div class="footer">
-                * needn't worry mr. lawyer we daren't soive any alquoholic or intoxiquating bevs. our usagio de term "lean" is simply 4 makin u woried and stimulating your attention. 
+                * needn't worry mr. lawyer we daren't soive any alquoholic or intoxiquating bevs. our usagio de term "lean" is simply 4 makin u woried and stimulating you're attention. 
                 <br> lean theater © 2025
             </div>
         </div>
