--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@ body {
                 <div class="movie-row" onclick="window.location.href='mailto:monksevillair@gmail.com?subject=eyy%20i%20want%20in%20on%20that%20secret%20movie'">
                     <div class="poster-wrapper">
                         <div class="poster-tape"></div>
-                        <img src="/imigez/0.jpg" alt="Movie Poster" class="movie-poster">
+                        <img src="/imigez/0.jpeg" alt="Movie Poster" class="movie-poster">
                         <div class="poster-tape-bottom"></div>
                     </div>
                     <div class="movie-info">
